# MessageRecorder

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: README.md  main.cpp
cli/: main.cpp
docs/: PLAN.md
include/jojo/rec/: inspect.hpp  inspect_types.hpp  record_types.hpp  recorder.hpp  replay.hpp  replay_types.hpp  types.hpp
include/jojo/rec/detail/: file_util.hpp  internal.hpp  manifest.hpp  recorder_queue.hpp  recorder_storage.hpp  recorder_worker.hpp  segment.hpp
src/: inspect.cpp  recorder.cpp  replay.cpp
src/internal/: file_util.cpp  internal.hpp  manifest.cpp  recorder_queue.cpp  recorder_storage.cpp  recorder_worker.cpp  segment.cpp
tests/: test_cases.cpp  test_helpers.cpp  test_helpers.hpp  test_main.cpp
